--- a/documentos/templates/documentos/relatorios_publicos.html
+++ b/documentos/templates/documentos/relatorios_publicos.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 {% comment %}
-    Desenvolvido para o Projeto Final de Engenharia
-    Autor: Luciano Pereira Soares <lpsoares@insper.edu.br>
-    Data: 20 de Maio de 2020
+  Desenvolvido para o Projeto Final de Engenharia
+  Autor: Luciano Pereira Soares <lpsoares@insper.edu.br>
+  Data: 20 de Maio de 2020
 {% endcomment %}
 
 {% block head %}
@@ -31,156 +31,160 @@
 
 {% block content %}
 
-  <span class="titulo">Relatórios Públicos</span>
+  <div id="language_button" style="user-select: none; border-radius: 10px;border: 2px solid #AAAAAA;float: right; margin-top: 4px; margin-left: 8px;"></div>
+
+  <span class="titulo">
+    <span lang="pt">Relatórios Públicos</span>
+    <span lang="en">Public Reports</span>
+  </span>
 
   {% include "edicoes.html" %}
   {% comment %} {% include "informacoes.html" %} {% endcomment %}
-    
+  
   <div class="atualizar">
 
-  <div class="table-responsive">
+    <div class="table-responsive">
 
-    <table id="RelatoriosTable" class="table table-bordered table-hover table-sm" style="width: 100%; max-width: 100%;">
-      <thead class="table-info">
-        <tr>
-          <th scope="col" onclick="w3.sortHTML('#RelatoriosTable', '.item', 'td:nth-child(1)')" style="cursor:pointer" class="text-center">Projeto</th>
-          <th scope="col" class="text-center">Estudantes</th>
-          <th scope="col" onclick="w3.sortHTML('#RelatoriosTable', '.item', 'td:nth-child(3)')" style="cursor:pointer" class="text-center">Orientador</th>
-          <th scope="col" nclick="w3.sortHTML('#RelatoriosTable', '.item', 'td:nth-child(4)')" style="cursor:pointer" class="text-center">Organização</th>
-          <th scope="col" onclick="w3.sortHTML('#RelatoriosTable', '.item', 'td:nth-child(5)')" style="cursor:pointer" class="text-center">Período</th>
-          <th scope="col" class="text-center">Documento</th>
-          <th scope="col" class="text-center">URLs</th>
-        </tr>
-      </thead>
-      <tbody>
-      {% for relatorio in relatorios %}
+      <table id="RelatoriosTable" class="table table-bordered table-hover table-sm" style="width: 100%; max-width: 100%;">
+        <thead class="table-info">
+          <tr>
+            <th scope="col" class="text-center"><span lang="pt">Projeto</span><span lang="en">Project</span></th>
+            <th scope="col" class="text-center"><span lang="pt">Estudantes</span><span lang="en">Students</span></th>
+            <th scope="col" class="text-center"><span lang="pt">Orientador</span><span lang="en">Advisor</span></th>
+            <th scope="col" class="text-center"><span lang="pt">Organização</span><span lang="en">Company</span></th>
+            <th scope="col" class="text-center"><span lang="pt">Período</span><span lang="en">Semester</span></th>
+            <th scope="col" class="text-center"><span lang="pt">Documento</span><span lang="en">Document</span></th>
+            <th scope="col" class="text-center">URLs</th>
+          </tr>
+        </thead>
+        <tbody>
+        {% for relatorio in relatorios %}
 
-        {% if relatorio.link or relatorio.documento and relatorio.projeto %}
+          {% if relatorio.link or relatorio.documento and relatorio.projeto %}
 
-          <tr class="item">
-            <td>
-              {% if relatorio.projeto %}
-                {% if user.tipo_de_usuario == 2 or user.tipo_de_usuario == 4 %}
-                  <a href="{% url 'projeto_completo' relatorio.projeto.id %}">
-                {% endif %}
-                {{relatorio.projeto.get_titulo}}
-                {% include "tipo_projeto.html" with projeto=relatorio.projeto %}
-                {% if user.tipo_de_usuario == 2 or user.tipo_de_usuario == 4 %}
-                  </a>
-                {% endif %}
-              {% endif %}
-            </td>
-
-            <td>
-              {% if relatorio.projeto %}
-                {% for alocacao in relatorio.projeto.alocacao_set.all %}
+            <tr class="item">
+              <td>
+                {% if relatorio.projeto %}
                   {% if user.tipo_de_usuario == 2 or user.tipo_de_usuario == 4 %}
-                    <a href="{% url 'estudante_detail' alocacao.aluno.id %}">
+                    <a href="{% url 'projeto_completo' relatorio.projeto.id %}">
                   {% endif %}
-                      &bull; {{alocacao.aluno.user.get_full_name}}
-                  {% if user.tipo_de_usuario == 2 or user.tipo_de_usuario == 4 %}
-                    </a>
-                  {% endif %}
-                  {% if not forloop.last %}<br>{% endif %}
-                {% endfor %}
-              {% endif %}
-            </td>
-
-            <td>
-              {% if relatorio.projeto and relatorio.projeto.orientador %}
-                {% if relatorio.projeto.orientador %}
-                  {% if user.tipo_de_usuario == 2 or user.tipo_de_usuario == 4 %}
-                    <a href="{% url 'professor_detail' relatorio.projeto.orientador.id %}">
-                  {% endif %}
-                    {{relatorio.projeto.orientador}}
+                  {{relatorio.projeto.get_titulo}}
+                  {% include "tipo_projeto.html" with projeto=relatorio.projeto %}
                   {% if user.tipo_de_usuario == 2 or user.tipo_de_usuario == 4 %}
                     </a>
                   {% endif %}
                 {% endif %}
-              {% endif %}
-            </td>
+              </td>
 
-            <td>
-              {% if relatorio.projeto and relatorio.projeto.organizacao %}
-                {% if user.tipo_de_usuario == 2 or user.tipo_de_usuario == 4 %}
-                  <a href="{% url 'organizacao_completo' relatorio.projeto.organizacao.id %}">
+              <td>
+                {% if relatorio.projeto %}
+                  {% for alocacao in relatorio.projeto.alocacao_set.all %}
+                    {% if user.tipo_de_usuario == 2 or user.tipo_de_usuario == 4 %}
+                      <a href="{% url 'estudante_detail' alocacao.aluno.id %}">
+                    {% endif %}
+                        &bull; {{alocacao.aluno.user.get_full_name}}
+                    {% if user.tipo_de_usuario == 2 or user.tipo_de_usuario == 4 %}
+                      </a>
+                    {% endif %}
+                    {% if not forloop.last %}<br>{% endif %}
+                  {% endfor %}
                 {% endif %}
-                  {{ relatorio.projeto.organizacao.nome }}
-                {% if user.tipo_de_usuario == 2 or user.tipo_de_usuario == 4 %}
-                  </a>
+              </td>
+
+              <td>
+                {% if relatorio.projeto and relatorio.projeto.orientador %}
+                  {% if relatorio.projeto.orientador %}
+                    {% if user.tipo_de_usuario == 2 or user.tipo_de_usuario == 4 %}
+                      <a href="{% url 'professor_detail' relatorio.projeto.orientador.id %}">
+                    {% endif %}
+                      {{relatorio.projeto.orientador}}
+                    {% if user.tipo_de_usuario == 2 or user.tipo_de_usuario == 4 %}
+                      </a>
+                    {% endif %}
+                  {% endif %}
                 {% endif %}
-              {% endif %}
-            </td>
+              </td>
 
-            <td style="text-align:center">
-              {% if relatorio.projeto %}
-                {{relatorio.projeto.ano}}.{{relatorio.projeto.semestre}}
-              {% endif %}
-            </td>
+              <td>
+                {% if relatorio.projeto and relatorio.projeto.organizacao %}
+                  {% if user.tipo_de_usuario == 2 or user.tipo_de_usuario == 4 %}
+                    <a href="{% url 'organizacao_completo' relatorio.projeto.organizacao.id %}">
+                  {% endif %}
+                    {{ relatorio.projeto.organizacao.nome }}
+                  {% if user.tipo_de_usuario == 2 or user.tipo_de_usuario == 4 %}
+                    </a>
+                  {% endif %}
+                {% endif %}
+              </td>
 
-            <td style="text-align:center">
+              <td style="text-align:center">
+                {% if relatorio.projeto %}
+                  {{relatorio.projeto.ano}}.{{relatorio.projeto.semestre}}
+                {% endif %}
+              </td>
+
+              <td style="text-align:center">
+                  {% if relatorio.link%}
+                    <a class="btn btn-light btn-outline-info btn-sm" style="margin-bottom: 5px;" 
+                      href="{{relatorio.link}}" target="_blank" rel="noopener noreferrer">
+                      <span class="short-text" style="width: 4em;">DSpace</span>
+                      <span class="full-text" style="width: 12em;">Link&nbsp;Biblioteca&nbsp;(DSpace)</span>
+                    </a><br>
+                  {% endif %}
+                  {% if relatorio.documento %}
+                    <a class="btn btn-light btn-outline-info btn-sm"
+                      href="{{request.scheme}}://{{request.get_host}}{{relatorio.documento.url}}" target="_blank" rel="noopener noreferrer">
+                      <span class="short-text" style="width: 4em;">Serv. PFE</span>
+                      <span class="full-text" style="width: 12em;">Link&nbsp;alternativo&nbsp;(Serv. PFE)</span>
+                    </a>
+                  {% endif %}
+              </td>
+
+              <td>
                 {% if relatorio.link%}
-                  <a class="btn btn-light btn-outline-info btn-sm" style="margin-bottom: 5px;" 
-                     href="{{relatorio.link}}" target="_blank" rel="noopener noreferrer">
-                    <span class="short-text" style="width: 4em;">DSpace</span>
-                    <span class="full-text" style="width: 12em;">Link&nbsp;Biblioteca&nbsp;(DSpace)</span>
+                  <a href="{{relatorio.link}}" target="_blank" rel="noopener noreferrer">
+                    <span>{{relatorio.link}}</span>
                   </a><br>
                 {% endif %}
-                {% if relatorio.documento %}
-                  <a class="btn btn-light btn-outline-info btn-sm"
-                     href="{{request.scheme}}://{{request.get_host}}{{relatorio.documento.url}}" target="_blank" rel="noopener noreferrer">
-                    <span class="short-text" style="width: 4em;">Serv. PFE</span>
-                    <span class="full-text" style="width: 12em;">Link&nbsp;alternativo&nbsp;(Serv. PFE)</span>
+                {% if relatorio.documento%}
+                  <a href="{{request.scheme}}://{{request.get_host}}{{relatorio.documento.url}}" target="_blank" rel="noopener noreferrer">
+                    <span>{{request.scheme}}://{{request.get_host}}{{relatorio.documento.url}}</span>
                   </a>
                 {% endif %}
             </td>
 
-            <td>
-              {% if relatorio.link%}
-                <a href="{{relatorio.link}}" target="_blank" rel="noopener noreferrer">
-                  <span>{{relatorio.link}}</span>
-                </a><br>
-              {% endif %}
-              {% if relatorio.documento%}
-                <a href="{{request.scheme}}://{{request.get_host}}{{relatorio.documento.url}}" target="_blank" rel="noopener noreferrer">
-                  <span>{{request.scheme}}://{{request.get_host}}{{relatorio.documento.url}}</span>
-                </a>
-              {% endif %}
-          </td>
+            </tr>
 
-          </tr>
+            {% endif %}
 
-          {% endif %}
+        {% endfor %}
+        </tbody>
+      </table>
+    </div>
 
-      {% endfor %}
-      </tbody>
-    </table>
   </div>
 
   <script>
     function carrega_pagina() {
-      //$('#RelatoriosTable tr > *:nth-child(7)').hide();
-      if($('#RelatoriosTable th').length > 0) {   // Verifica se os THs foram registrados primeiro
-        table = $('#RelatoriosTable').dataTable();
+      if($("#RelatoriosTable th").length > 0) {   // Verifica se os THs foram registrados primeiro
+        table = $("#RelatoriosTable").dataTable();
         if(table) {
           table.fnSetColumnVis( 4, !($("#filterEdicao").val()!="todas" ));  // esconde Período
           table.fnSetColumnVis( 6, false );  // esconde longa URL
         }
       }
-    };
-    
+      esconde_lingua();
+    }
     function carrega_site() {
       {% include "edicao_puxar_local_ou_versao.js" %}
       carrega_pagina();
     };
-
     window.onload = carrega_site
-
   </script>
 
-  </div>
-  <br>
-
   {% include "edicoes_ajax.html" with tabela="Relatorios" %}
+
+  {% comment %} Sistema de controle de exibição de linguas. {% endcomment %}
+  {% include "linguas.html" %}
 
 {% endblock %}
