--- a/templates/edicoes.html
+++ b/templates/edicoes.html
@@ -51,7 +51,7 @@
         {% if not sem_edicao %}
         <div class="input-group input-group-sm mt-1">
           <div class="input-group-prepend">
-            <label class="to_label input-group-text" for="filterEdicao" onClick="recarregar_pagina()"><span class="to_hide">Edição</span></label>
+            <label class="to_label input-group-text" for="filterEdicao" onClick="recarregar_pagina()"><span class="to_hide"><span lang="pt">Edição</span><span lang="en" style="display: none;">Edition</span></span></label>
           </div>
           <select class="to_hide filter custom-select w-auto" id="filterEdicao" name="edicao">
             <optgroup class="opt_edi">
